--- a/_posts/es/pages/2014-09-13-404.md
+++ b/_posts/es/pages/2014-09-13-404.md
@@ -1,10 +1,10 @@
 ---
-title: Oups !
+title: Página no encontrada !
 ---
 
 ~
 
-La page recherchée a probablement été supprimée ou déplacée. <br/>
-Je suis sûr que vous trouverez votre bonheur dans les articles existants :
+La página no ha sido encontrada, probablemente ha sido suprimida o desplazada. <br/>
+Puede encontrar otros artículos en mi blog:
 
 {% include list.html %}
