--- a/_posts/es/pages/2014-08-24-acerca.md
+++ b/_posts/es/pages/2014-08-24-acerca.md
@@ -20,3 +20,11 @@ title: Acerca de
 		
 Working as a freelance consultant particularly interested in a
 	remote work contract.	
+	
+## Site stack
+
+Built with [Jekyll](http://jekyllrb.com/). 
+
+Hosted on [Github Pages](https://pages.github.com/). 
+
+Feel free to [fork](https://github.com/jgpelaez/jgpelaez.github.io), change, modify and re-use it.
