--- a/_posts/en/pages/2014-08-24-about.md
+++ b/_posts/en/pages/2014-08-24-about.md
@@ -1,7 +1,9 @@
 ---
-title: Home
-header-img: "media/background/clouds-ostende.jpg"
+title: About
+header-img: "media/background/conil-beach-1.jpg"
 ---
+
+{% include photo.html %}
 
 ## Juan Carlos García Peláez
 * Enthusiastic software engineer always looking on new
