--- a/_posts/en/pages/2014-08-30-index.md
+++ b/_posts/en/pages/2014-08-30-index.md
@@ -3,3 +3,14 @@ title: Home
 permalink: /
 header-img: "media/background/clouds-ostende.jpg"
 ---
+
+{% include photo.html %}
+
+
+This is my professional web site and blog. In this blog I will try to explain my transition and trip from the old style enterprise architecture to modern architectures in the cloud. Going throught different topics as continuous integration/deployment/delivery, containerization, DevOps philosophy, microservices, cloud tools, and other topics as HTML5, ESB, etc.
+
+# Inspiration
+
+The name of the site starts inspired on my first name (Juan Carlos) in one of the flemish dialects (Jang). Jan is also my name in old Catalan.
+
+Jang... And the cloud. Inspired by my travel to the cloud technologies, and for the tale "Jack and the beans talk". The trip for Jack ends up in a disaster, I bet mine will end up better, but hoping to find the same adventures in the Cloud technologies.  
