--- a/_posts/en/pages/2014-08-24-about.md
+++ b/_posts/en/pages/2014-08-24-about.md
@@ -5,7 +5,7 @@ header-img: "media/background/conil-beach-1.jpg"
 
 {% include photo.html %}
 
-## Juan Carlos GarcÌa Pel·ez
+## Juan Carlos Garc√≠a Pel√°ez
 * Enthusiastic software engineer always looking for new
 		technologies and challenges.
 * Full stack engineer
