--- a/_posts/en/pages/2014-08-30-index.md
+++ b/_posts/en/pages/2014-08-30-index.md
@@ -14,5 +14,5 @@ This is my professional web site and blog. In this blog I will try to explain my
 The name of the site originates from and is inspired by my first name (Juan Carlos) in one of the flemish dialects (in Limburg "Jang").
 Jan is also my name in old Catalan.
 
-"Jang… and the cloud".
+"Jang... and the cloud".
 Inspired by my travel into the cloud technologies, and from the story "Jack and the Beanstalk". The trip for Jack ends up in disaster, I'm convinced mine will end up better, although hoping to encounter similar adventures in the Cloud technologies.
