--- a/_posts/en/pages/2014-08-30-index.md
+++ b/_posts/en/pages/2014-08-30-index.md
@@ -11,7 +11,7 @@ This is my professional web site and blog. In this blog I will try to explain my
 
 # Inspiration
 
-The name of the site originates from and is inspired by my first name (Juan Carlos) in one of the flemish dialects (in Limburg "Jang").
+The name of the site originates from and is inspired by my first name (Juan Carlos) in one of the flemish dialects (in [Limburg] (https://en.wikipedia.org/wiki/Limburg_(Belgium)) "Jang").
 Jan is also my name in old Catalan.
 
 "Jang... and the cloud".
