--- a/_posts/es/pages/2014-08-30-inicio.md
+++ b/_posts/es/pages/2014-08-30-inicio.md
@@ -1,4 +1,5 @@
 ---
 title: Inicio
-header-img: "media/background/oosstende-clouds3.jpg"
+header-img: "media/background/clouds-ostende.jpg"
+post-type: page
 ---
